# ink-and-memory

./: .gitignore  AGENTS.md  App.css  App.tsx  CLAUDE.md  LICENSE  README.md  README.zh.md  server.py
.github/workflows/: ci-backend.yml  ci-frontend.yml  deploy-backend.yml  deploy-frontend.yml
.swm/: schema-analysis.j3t2rus0.sw.md  swimm.json
backend/: .gitignore  API.md  Dockerfile  LOCALSTORAGE_AUDIT.md  MIGRATION_SUMMARY.md  auth.py  config.py  database.py  docker-compose.yml  models.json.example  proxy_config.py  pyproject.toml  requirements.txt  scheduler.py  server.py  server_old.py  speech_recognition.py  stateful_analyzer.py  stateless_analyzer.py  test_image_gen.py  test_migration.py  test_real_migration.py  trigger.txt
backend/tests/: README.md  ci-smoke.sh  picture_dry_run.py
docs/: voice-customization.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.old.tsx  App.tsx  i18n.ts  main.tsx
frontend/src/api/: voiceApi.ts
frontend/src/components/: AboutView.tsx  AgentDropdown.tsx  AnalysisView.tsx  BookPage.tsx  CalendarPopup.tsx  CalendarView.tsx  CalendarWidget.tsx  ChatWidgetUI.tsx  CollectionsView.tsx  CommentCard.tsx  DeckEditorModal.tsx  DeckManager.tsx  EditableTextArea.tsx  LeftSidebar.tsx  LeftToolbar.tsx  StateChooser.tsx  StateCube.tsx  TopNavBar.tsx  VoiceComment.tsx  VoiceSettings.tsx  VoicesPanel.tsx  WritingArea.tsx  deckVisuals.ts
frontend/src/constants/: storageKeys.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/engine/: EditorEngine.ts
(+14 files in other folders)
