[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ink-and-memory-backend"
version = "0.1.0"
description = "Ink & Memory backend API"
requires-python = ">=3.9,<3.10"
dependencies = [
  "polyagent", # PolyCLI package on PyPI
  "fastapi>=0.110,<1",
  "uvicorn>=0.22,<1",
  "httpx[socks]>=0.28,<0.29",
  "apscheduler>=3.10,<4",
  "dashscope>=1.24,<2",
  "bcrypt>=4,<5",
  "PyJWT>=2,<3",
  "pydantic>=2.5,<3",
  "requests>=2.31,<3",
  "beautifulsoup4>=4.12,<5",
  "rich>=13,<15",
  "tqdm>=4.65,<5",
  "python-dotenv>=1,<2",
  "eval-type-backport>=0.2,<1",
  "websockets>=12,<14",
  "pillow>=10,<11",
]

[tool.uv]
package = false
